// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollButton should render with all props assigned 1`] = `
<a
  className="Button test secondary fullWidth"
  onClick={[Function]}
  tabIndex={-1}
>
  <span>
    Test
  </span>
</a>
`;

exports[`ScrollButton should render with required props 1`] = `
<a
  className="Button primary"
  onClick={[Function]}
  tabIndex={0}
>
  <span>
    Test
  </span>
</a>
`;
